--- a/Server/Makefile
+++ b/Server/Makefile
@@ -223,6 +223,7 @@ Makefile: server.pro C:/Qt/5.12.3/mingw73_64/mkspecs/win32-g++/qmake.conf C:/Qt/
 		C:/Qt/5.12.3/mingw73_64/mkspecs/features/qt_config.prf \
 		C:/Qt/5.12.3/mingw73_64/mkspecs/win32-g++/qmake.conf \
 		C:/Qt/5.12.3/mingw73_64/mkspecs/features/spec_post.prf \
+		.qmake.stash \
 		C:/Qt/5.12.3/mingw73_64/mkspecs/features/exclusive_builds.prf \
 		C:/Qt/5.12.3/mingw73_64/mkspecs/features/toolchain.prf \
 		C:/Qt/5.12.3/mingw73_64/mkspecs/features/default_pre.prf \
@@ -413,6 +414,7 @@ C:/Qt/5.12.3/mingw73_64/mkspecs/features/qt_functions.prf:
 C:/Qt/5.12.3/mingw73_64/mkspecs/features/qt_config.prf:
 C:/Qt/5.12.3/mingw73_64/mkspecs/win32-g++/qmake.conf:
 C:/Qt/5.12.3/mingw73_64/mkspecs/features/spec_post.prf:
+.qmake.stash:
 C:/Qt/5.12.3/mingw73_64/mkspecs/features/exclusive_builds.prf:
 C:/Qt/5.12.3/mingw73_64/mkspecs/features/toolchain.prf:
 C:/Qt/5.12.3/mingw73_64/mkspecs/features/default_pre.prf:
