Gitignore documents & repeated password fix
Ora il gitignore ignora anche i file dei documents nella cartella Files dentro alla cartella Server.
Ho sistemato il controllo sulla repeated password

--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,6 @@ Server/debug/server.exe
 CLIENT/debug/GIMPdocs.exe
 CLIENT/Makefile.*
 Server/Makefile.*
+
+#Documents salvati nel DB
+Server/Files/*
